--- a/src/main/resources/templates/layouts/_mainSidebarx.html
+++ b/src/main/resources/templates/layouts/_mainSidebarx.html
@@ -6,8 +6,8 @@
     <!-- <a href="index3.html" class="brand-link"> -->
     <a href="/" th:href="@{/}" class="brand-link navbar-primary">
         <!-- <img src="images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8"> -->
-        <img src="" th:src="@{/img/walton_logo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3 bg-white" style="opacity: .8"/>
-        <span class="brand-text font-weight-light" style="font-weight: bold !important; color: azure;">HRMS</span>
+        <img src=""  th:src="@{/img/header_logo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3 bg-white" style="opacity: .8; height: 50px; width: 50px"/>
+       <!-- <span class="brand-text font-weight-light" style="font-weight: bold !important; color: azure;">EASY-ERP</span>-->
     </a>
 
     <!-- Sidebar -->
