--- a/src/main/resources/templates/layouts/_header.html
+++ b/src/main/resources/templates/layouts/_header.html
@@ -1,76 +1,59 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-    <!-- <nav class="main-header navbar navbar-expand navbar-white navbar-light"> -->
-    <nav th:fragment="header" class="main-header navbar navbar-expand navbar-dark navbar-indigo">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="/" th:href="@{/}" class="nav-link"><i class="fa fa-home fa-lg"></i></a>
-            </li>
-<!--            <li class="nav-item d-none d-sm-inline-block">-->
-<!--                <a href="#" class="nav-link">Contact</a>-->
-<!--            </li>-->
-        </ul>
+<nav th:fragment="header" class="main-header navbar navbar-expand navbar-dark navbar-indigo">
+    <!-- Left navbar links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a href="/" th:href="@{/}" class="nav-link"><i class="fa fa-home fa-lg"></i></a>
+        </li>
+    </ul>
 
-        <!-- SEARCH FORM -->
-        <form class="form-inline ml-3" id="from_gSearchInputTag">
-            <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" id="gSearchInputTag" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                    <button class="btn btn-navbar" type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
+    <!-- SEARCH FORM -->
+    <form class="form-inline ml-3" id="from_gSearchInputTag">
+        <div class="input-group input-group-sm">
+            <input class="form-control form-control-navbar" id="gSearchInputTag" type="search" th:value="#{search}" placeholder="Search" aria-label="Search" >
+            <div class="input-group-append">
+                <button class="btn btn-navbar" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
-        </form>
+        </div>
+    </form>
 
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-            <!-- Messages Dropdown Menu -->
-            <!--<li class="nav-item dropdown">
-                <a class="nav-link" data-toggle="dropdown" href="#">
-                    <i class="far fa-comments"></i>
-                    <span class="badge badge-danger navbar-badge">3</span>
-                </a>
-                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <a href="#" class="dropdown-item">
+    <!-- Language Dropdown -->
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i th:class="__${#locale}__=='en'?'fa fa-language':'fa cnm-fr' "></i>
+
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
+                <th:block th:each="l : ${session.languages}">
+                    <a class="dropdown-item" th:href="${'?lang=' + l.langCode}">
+                      <!--  <i th:class="${l.langCode} == 'en' ? 'fa cnm-en' : 'fa cnm-fr'"></i>-->
+                        <i th:class="${l.langCode} == 'en' ? 'fa fa-language' : 'fa cnm-fr'"></i>
+                        <span th:text="#{locale_ + ${l.langCode}}"></span>
                     </a>
-                    <div class="dropdown-divider"></div>
+                </th:block>
+            </div>
+        </li>
 
-                    <div class="dropdown-divider"></div>
-
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
-                </div>
-            </li>-->
-
-            <!-- Notifications Dropdown Menu -->
-            <!--<li class="nav-item dropdown">
-                <a class="nav-link" data-toggle="dropdown" href="#">
-                    <i class="far fa-bell"></i>
-                    <span class="badge badge-warning navbar-badge">15</span>
-                </a>
-            </li>-->
-
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" th:href="@{/logout}" class="nav-link">
-                    <i class="fas fa-sign-out-alt"></i>
-                    Logout
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                    <i class="fas fa-cog"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <!-- /.navbar -->
-
-
-
+        <!-- Logout and Settings Links -->
+        <li class="nav-item d-none d-sm-inline-block">
+            <a href="#" th:href="@{/logout}" class="nav-link">
+                <i class="fas fa-sign-out-alt"></i>
+                Logout
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+                <i class="fas fa-cog"></i>
+            </a>
+        </li>
+    </ul>
+</nav>
 
 </html>
