--- a/src/main/resources/templates/layouts/_mainSidebarx.html
+++ b/src/main/resources/templates/layouts/_mainSidebarx.html
@@ -3,9 +3,7 @@
 <!-- <aside class="main-sidebar sidebar-dark-primary elevation-4"> -->
 <aside th:fragment="mainSidebar" class="main-sidebar elevation-4 sidebar-light-indigo">
     <!-- Brand Logo -->
-    <!-- <a href="index3.html" class="brand-link"> -->
     <a href="/" th:href="@{/}" class="brand-link navbar-primary">
-        <!-- <img src="images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8"> -->
         <img src=""  th:src="@{/img/header_logo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3 bg-white" style="opacity: .8; height: 50px; width: 50px"/>
        <!-- <span class="brand-text font-weight-light" style="font-weight: bold !important; color: azure;">EASY-ERP</span>-->
     </a>
@@ -15,15 +13,9 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <!--                    <img src="/static/vendor/adminlte/dist/img/user2-160x160.jpg" th:src="@{/vendor/adminlte/dist/img/user2-160x160.jpg}" class="img-circle elevation-2" alt="User Image">-->
                 <i class="fas fa-user-circle fa-2x"></i>
             </div>
             <div class="info">
-                <!--                    <div sec:authorize="isAuthenticated()">Authenticated as <span sec:authentication="name"></span></div>-->
-                <!--                    <span sec:authentication="principal.authorities">abcRoles</span>-->
-                <!--                    <div th:if="${session.containsKey('email')}" th:text="${session.email}"></div>-->
-                <!--                    <div th:text="${session.name}">John Doe</div>-->
-                <!--                    <a th.href="@{/user/profile/{id}(id=${session.userId})}" class="d-block" th:text="${session.displayName}">Alexander Pierce</a>-->
                 <a th:href="@{/user/profile/{id}(id=${session.userId})}" class="d-block" th:text="${session.displayName}"> </a>
 
                 </a>
@@ -38,7 +30,7 @@
                 <li class="nav-item has-treeview menu-open">
                     <a href="#" th:href="@{/}" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
-                        <p>
+                        <p th:text="#{dashboard}">
                             Dashboard
                             <!--                                 <i class="right fas fa-angle-left"></i>-->
                         </p>
